# aias-gm

./: .env.sample  .gitignore  Cargo.toml  README.md  docker-compose.yml  test.sh
app/: Cargo.toml  Dockerfile
app/src/: db.rs  gm.rs  main.rs  tests.rs  utils.rs
app/src/handlers/: challenge.rs  combine.rs  issue.rs  pubkey.rs
src/: db.rs  gm.rs  handler.rs  main.rs  open.rs  tests.rs  utils.rs
src/handlers/: challenge.rs  combine.rs  issue.rs  mod.rs  pubkey.rs
tor/: Dockerfile  torrc
