[package]
name = "aias-gm"
version = "0.1.0"
authors = ["akakou <akakou571@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-session = "0.4.1"
actix-rt = "1"
actix-connect = "1.0.2"
actix-socks = { git = "https://github.com/pj-aias/actix-socks.git", branch = "master" }
rand = "0.8.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "0.15.5"
base64 = "0.13.0"
chrono = { version = "0.4", features = ["serde"] }

log = "0.4"
fast_log="1.3"

rbatis = { version = "2" }
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.distributed-bss]
git="https://github.com/pj-aias/distributed-bbs"
branch = "main"

[dependencies.bls12_381]
git="https://github.com/akakou/bls12_381/"
branch="features/gt_supports"
default-features=false
features=["alloc", "group", "pairings", "serde"]